--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,6 +42,7 @@
     <color name="zhy_line_3">#e4e4e4</color>
     <color name="zhy_line_4">#efefef</color>
     <color name="zhy_line_5">#dde4e3</color>
+    <color name="zhy_line_6">#bfbfbf</color>
     <color name="cemetery_titlecolor">#ffda76</color>
     <color name="gray_text">#767676</color>
     <color name="zhy_text_color_1">#48cfad</color>
