--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -58,6 +58,7 @@
 
             <com.shian.shianlife.common.view.editor.FuneralSetmealView
                 android:id="@+id/fsv"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/dimen_20dp"
