--- a/app/src/main/res/layout/layout_pgzx_view.xml
+++ b/app/src/main/res/layout/layout_pgzx_view.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/dimen_32dp"
+    android:layout_marginRight="@dimen/dimen_32dp"
     android:orientation="vertical"
-    android:padding="@dimen/dimen_10dp">
+  >
 
     <TextView
+        android:layout_marginTop="@dimen/dimen_32dp"
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/blackgroundmain"
-        android:textSize="@dimen/txtsize_30sp" />
+        android:textColor="@color/black_item_shua_textcolor"
+        android:textSize="@dimen/dimen_32dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
